// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill should render default pill without variant 1`] = `
<div>
  <div
    background="bg-white dark:bg-slate-300"
    border="border-gray-500"
    class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-gray-500 bg-white dark:bg-slate-300 border-gray-500"
    color="text-gray-500"
    data-testid="pill"
  >
    Default
  </div>
</div>
`;

exports[`Pill should render green pill 1`] = `
<div>
  <div
    background="bg-white dark:bg-slate-300"
    border="border-gray-500"
    class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-gray-500 bg-white dark:bg-slate-300 border-gray-500"
    color="text-gray-500"
    data-testid="pill"
  >
    Success
  </div>
</div>
`;

exports[`Pill should render red pill 1`] = `
<div>
  <div
    background="bg-white dark:bg-slate-300"
    border="border-gray-500"
    class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-gray-500 bg-white dark:bg-slate-300 border-gray-500"
    color="text-gray-500"
    data-testid="pill"
  >
    Cancel
  </div>
</div>
`;

exports[`Pill should render yellow pill 1`] = `
<div>
  <div
    background="bg-white dark:bg-slate-300"
    border="border-gray-500"
    class="px-6 py-3 m-auto shadow-md rounded-full text-base text-center w-fit border-2 font-bold cursor-pointer text-gray-500 bg-white dark:bg-slate-300 border-gray-500"
    color="text-gray-500"
    data-testid="pill"
  >
    Warning
  </div>
</div>
`;
